--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="profile">Profile</string>
+    <string name="web_client">1069198864998-c71dtr9t1eh3552fdfbsnkmqofi01htd.apps.googleusercontent.com</string>
 </resources>
